src/objects/Ven_Share__c.object
<CustomObject>
    <fields>
        <fullName>Ven_Account__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <inlineHelpText>Hier handelt es sich um die Firma (Account) an der die Investoren beteiligt sind.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shares (Account)</relationshipLabel>
        <relationshipName>Cap_Table_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ven_Aktiv__c</fullName>
        <formula>Ven_Round__r.Ven_Aktiv__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Round_Number__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt. Die Formel kopiert den Wert aus dem gleichnamigen Feld aus dem Objekt Round.</description>
        <formula>Ven_Round__r.Ven_Round_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hier wird die Beteiligungsrunde erfasst per Formel.</inlineHelpText>
        <label>Round Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_Round__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <inlineHelpText>Die Round zu der dieser Share gehört.</inlineHelpText>
        <label>Round</label>
        <referenceTo>Ven_Round__c</referenceTo>
        <relationshipLabel>Shares</relationshipLabel>
        <relationshipName>Ven_Shares</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ven_Share__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <formula>Ven_Shares__c / Ven_Round__r.Ven_all_Shares__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hier werden automatisch die % der Beteiligungen errechnet.</inlineHelpText>
        <label>Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Shareholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <inlineHelpText>Bitte den Shareholder (Account) eingetragen für den verknüpften Account.</inlineHelpText>
        <label>Shareholder</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Shareholder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ven_Shares__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <inlineHelpText>Bitte die Beteiligung des Investors an der Firma (Account) eintragen in einer bestimmten Beteiligungsrunde.</inlineHelpText>
        <label>Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_Wert__c</fullName>
        <formula>Ven_Shares__c * Ven_Round__r.Ven_Wert_pro_Anteil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Share</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000000}</displayFormat>
        <label>Share-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>